# Dual-Drone

./: .gitignore  Dockerfile  README.md  requirements.txt  run_ros.sh  test.py
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/build_isolated/geotag/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
catkin_ws/build_isolated/libmavconn/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
catkin_ws/build_isolated/mavros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
catkin_ws/build_isolated/mavros_extras/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_ws/build_isolated/mavros_msgs/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
catkin_ws/devel_isolated/geotag/: .catkin
catkin_ws/devel_isolated/libmavconn/: .rosinstall  local_setup.sh
catkin_ws/devel_isolated/mavros/: .rosinstall  local_setup.sh
catkin_ws/install_isolated/: local_setup.fish  setup.fish
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/geotag/: CMakeLists.txt
catkin_ws/src/geotag/launch/: geotagger.launch  uav1.launch  uav2.launch
catkin_ws/src/geotag/scripts/: Dynamic_Setpoint.py  Geotagger_1.py  battery_status.py  global_aco_path.json  live_local_path.json
catkin_ws/src/geotag/tags/: geotags.kml  json_to_kml.py  real_geotags.json
(+151 files in other folders)
